@@ -19,6 +19,7 @@
 import logging
 from enum import Enum
 from functools import partial, wraps
+from typing import List, Union
 
 import healpy as hp
 import matplotlib.transforms as transforms
@@ -55,14 +56,18 @@ class CacheManager(object):
     memory_cache = dict()
 
     @staticmethod
-    def get_cache_pandas(func=None, keycache_argument=0, level=logging.INFO):
+    def get_cache_pandas(
+        func=None,
+        keycache_argument: Union[int, List[int]] = 0,
+        level=logging.INFO,
+    ):
         """Cache a pandas DataFrame.
 
         Parameters
         ----------
         func: func
             Function to cache (default: {None})
-        keycache_argument: int
+        keycache_argument: Union[int, List[int]]
             Argument number that is used for the cache (default: 0)
         level: int
             Level from which the log is displayed (default: {logging.INFO})
@@ -82,31 +87,48 @@ class CacheManager(object):
         def newfunc(*args, **kwargs):
             name = func.__name__
             logger = logging.getLogger(__name__ + "." + name)
-            if keycache_argument > len(args) - 1:
+            if (
+                type(keycache_argument) is not list
+                and keycache_argument > len(args) - 1
+            ):
                 logger.warning(
                     f"Error during the configuration of keycache_argument, the value should be in [0, {len(args)-1}]"
                 )
                 result = func(*args, **kwargs)
                 return result
+            elif (
+                type(keycache_argument) is list
+                and len(
+                    [key for key in keycache_argument if key > len(args) - 1]
+                )
+                > 0
+            ):
+                logger.warning(
+                    f"Error during the configuration of keycache_argument, each value of the list should be in [0, {len(args)-1}]"
+                )
+                result = func(*args, **kwargs)
+                return result
 
-            if args[keycache_argument] in CacheManager.memory_cache:
+            key_cache = (
+                "-".join(
+                    [args[arg_number] for arg_number in keycache_argument]
+                )
+                if type(keycache_argument) is list
+                else args[keycache_argument]
+            )
+
+            if key_cache in CacheManager.memory_cache:
                 if logger.getEffectiveLevel() >= level:
-                    logger.log(
-                        level, f"Retrieve {args[keycache_argument]} from cache"
-                    )
-                result = CacheManager.memory_cache[
-                    args[keycache_argument]
-                ].copy()
+                    logger.log(level, f"Retrieve {key_cache} from cache")
+                result = CacheManager.memory_cache[key_cache].copy()
             else:
                 result = func(*args, **kwargs)
                 if logger.getEffectiveLevel() >= level:
                     logger.log(level, f"Init the memory cache")
                 CacheManager.memory_cache.clear()
                 if logger.getEffectiveLevel() >= level:
-                    logger.log(level, f"Cache {args[keycache_argument]}")
-                CacheManager.memory_cache[
-                    args[keycache_argument]
-                ] = result.copy()
+                    logger.log(level, f"Cache {key_cache}")
+                CacheManager.memory_cache[key_cache] = result.copy()
             return result
 
         return newfunc
